# KEGGpull

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  OUTPUT.tsv  README.rst  aga_20230511203527.tsv  aga_20230513164545.tsv  old_OUT.tsv  output_test.tsv  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/keggpull/: __init__.py  argparser.py  async_test.py  logger.py  main.py  skeleton.py  tmp.py  utilities.py
tests/: conftest.py  test_main.py  test_skeleton.py  test_utilities.py
tests/data/: hsa_pathway_list.tsv
