[metadata]
name = KEGGpull
description = Retrieves pathways and their associated metabolite codes from KEGG per organism to be used in pathway analyses.
author = R-Grosman
author_email = 104369922+R-Grosman@users.noreply.github.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/R-Grosman/KEGGpull
project_urls =
    Documentation = https://github.com/R-Grosman/KEGGpull

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Environment :: Console


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version>="3.10"
    attrs>=22.2.0,<23.0
    certifi>=2022.12.7,<2023.0
    charset-normalizer>=2.1.1,<3.0
    colorama>=0.4.6,<1.0
    coverage>=7.0.3,<8.0
    exceptiongroup>=1.1.0,<2.0
    idna>=3.4,<4.0
    iniconfig>=1.1.1,<2.0
    packaging>=22.0,<23.0
    pluggy>=1.0.0,<2.0
    pytest>=7.2.0,<8.0
    pytest-cov>=4.0.0,<5.0
    pytest-cover>=3.0.0,<4.0
    pytest-coverage>=0.0,<1.0
    requests>=2.28.1,<3.0
    tomli>=2.0.1,<3.0
    tqdm>=4.65.0,<5.0
    urllib3>=1.26.13,<2.0
    

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install KEGGpull[PDF]` like:
# PDF = ReportLab; RXP
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    keggpull = keggpull.main:run

[tool:pytest]
addopts =
    --cov keggpull --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 120
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.3.1
package = keggpull
